# OBS-Studio-New

./: appveyor.yml  buildspec.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: main.yml
CI/flatpak/: com.obsproject.Studio.json
CI/windows/: 01_install_dependencies.ps1
UI/: CMakeLists.txt  adv-audio-control.cpp  adv-audio-control.hpp  audio-encoders.cpp  obs-app.cpp  source-tree.cpp  source-tree.hpp  volume-control.cpp  volume-control.hpp  window-basic-adv-audio.cpp  window-basic-main-outputs.cpp  window-basic-main-profiles.cpp  window-basic-main.cpp  window-basic-main.hpp  window-basic-settings-stream.cpp  window-basic-settings.cpp  window-basic-settings.hpp  window-cefwidgetdialog.cpp  window-cefwidgetdialog.hpp
UI/data/locale/: en-US.ini
UI/data/themes/: Acri.qss  Dark.qss  Rachni.qss  System.qss
UI/forms/: CefWidgetDialog.ui  OBSBasic.ui  OBSBasicSettings.ui  obs.qrc
UI/frontend-plugins/asio-output-ui/: ASIOSettingsDialog.cpp  ASIOSettingsDialog.h  CMakeLists.txt  asio-ui-main.cpp
UI/frontend-plugins/decklink-captions/: decklink-captions.cpp
UI/frontend-plugins/ffmpeg-output-ui/: FFmpegOutputUI.cpp  FFmpegOutputUI.h  ffmpeg-ui-main.cpp  ffmpeg-ui-main.h
UI/frontend-plugins/ffmpeg-output-ui/data/locale/: en-US.ini
UI/frontend-plugins/ffmpeg-output-ui/forms/: output.ui
cmake/Modules/: CopyMSVCBins.cmake  FindJack.cmake  FindLibnvafx.cmake  FindLibrist.cmake  FindLibsrt.cmake  ObsCpack.cmake
docs/sphinx/: reference-libobs-graphics-effects.rst
libobs/: CMakeLists.txt  obs-audio-controls.c  obs-audio-controls.h  obs-audio.c  obs-hotkey.c  obs-hotkey.h  obs-internal.h  obs-output.c  obs-scene.c  obs-service.h  obs-source-transition.c  obs-source.c  obs-source.h  obs.c  obs.h
libobs-d3d11/: d3d11-shader.cpp  d3d11-subsystem.cpp
libobs/audio-monitoring/pulse/: pulseaudio-output.c
libobs/audio-monitoring/win32/: wasapi-output.c  wasapi-output.h
libobs/graphics/: effect-parser.c  effect-parser.h  effect.c  graphics.h
libobs/media-io/: audio-io.c  audio-io.h  audio-resampler-ffmpeg.c
libobs/util/: profiler.c
plugins/: CMakeLists.txt
plugins/decklink/: audio-repack.c  audio-repack.h  const.h  decklink-device-instance.cpp  decklink-source.cpp  plugin-main.cpp
plugins/decklink/data/locale/: en-US.ini
plugins/image-source/: obs-slideshow.c
plugins/linux-alsa/: alsa-input.c
plugins/linux-pulseaudio/: pulse-input.c
plugins/mac-capture/: mac-audio.c
plugins/obs-ffmpeg/: CMakeLists.txt  ffmpeg-encoded-output.c  ffmpeg-encoded-output.h  jim-nvenc.c  jim-nvenc.h  obs-ffmpeg-audio-encoders.c  obs-ffmpeg-formats.h  obs-ffmpeg-mpegts.c  obs-ffmpeg-mux.c  obs-ffmpeg-output.c  obs-ffmpeg-output.h  obs-ffmpeg-source.c  obs-ffmpeg-srt-mux.c  obs-ffmpeg-srt-stats.cpp  obs-ffmpeg-srt-stats.hpp  obs-ffmpeg-srt.h  obs-ffmpeg.c
plugins/obs-ffmpeg/cmake/: legacy.cmake
plugins/obs-ffmpeg/data/locale/: en-US.ini
plugins/obs-ffmpeg/ffmpeg-mux/: CMakeLists.txt  ffmpeg-mux-rist.h  ffmpeg-mux-srt.h  ffmpeg-mux-url.h  ffmpeg-mux.c  ffmpeg-mux.h
plugins/obs-filters/: CMakeLists.txt  expander-filter.c  noise-suppress-filter.c  nvafx-load.h  nvidia-greenscreen-filter.c  nvvfx-load.h  obs-filters.c
plugins/obs-filters/data/: rtx_greenscreen.effect
plugins/obs-filters/data/locale/: en-US.ini
plugins/obs-layer-view/: CMakeLists.txt  obs-layer-view.cpp  obs-layer-view.hpp
plugins/obs-libfdk/: obs-libfdk.c
plugins/obs-outputs/: flv-mux.c  rtmp-stream.c  rtmp-stream.h
plugins/obs-shader-filter/: CMakeLists.txt  fft.c  fft.h  muParserFixes.h  obs-shader-filter.c  obs-shader-filter.cpp  obs-shader-filter.hpp  readme.md  tinyexpr.c  tinyexpr.h
plugins/obs-text/data/locale/: en-US.ini
plugins/obs-text/gdiplus/: obs-text.cpp
plugins/obs-track-out/: obs-track-out.c
plugins/obs-transitions/: transition-stinger.c
plugins/obs-voicemeeter/: CMakeLists.txt  circle-buffer.h  obs-voicemeeter.c  obs-voicemeeter.cpp
plugins/obs-vst3/: CMakeLists.txt  obs-vst3.cpp  obs-vst3.hpp
plugins/obs-vst3/data/locale/: en-US.ini
plugins/obs-webrtc/: CMakeLists.txt  obs-webrtc.c  obs-webrtc.cpp  whip-output.c  whip-output.cpp  whip-output.h  whip-service.c  whip-service.cpp  whip-service.h
plugins/obs-webrtc/cmake/: legacy.cmake
plugins/obs-webrtc/data/locale/: en-US.ini
plugins/obs-x264/: obs-x264.c
plugins/opencv-out/: CMakeLists.txt  opencv-out.c
plugins/rematrix-filter/: rematrix-filter.c
plugins/rtmp-services/: rtmp-custom.c  rtmp-services-main.c
plugins/rtmp-services/data/schema/: service-schema-v4.json
plugins/win-asio/: ASIODevice.cpp  ASIODevice.hpp  ASIOSettingsDialog.cpp  ASIOSettingsDialog.hpp  CMakeLists.txt  Helpers.h  asio-input.cpp  asio-loader.hpp  asio-wrapper.bak  byteorder.h  circle-buffer.h  iasiodrv.h  plugin-main.cpp  win-asio.cpp
plugins/win-asio/JuceLibraryCode/: AppConfig.h  JuceHeader.h
plugins/win-asio/JuceLibraryCode/modules/juce_audio_devices/: juce_audio_devices.cpp  juce_audio_devices.h
plugins/win-asio/JuceLibraryCode/modules/juce_audio_devices/native/: juce_win32_ASIO.cpp
plugins/win-asio/cmake/: legacy.cmake
plugins/win-asio/data/locale/: en-US.ini
plugins/win-asio/forms/: output.ui
plugins/win-dshow/: ffmpeg-decode.c  win-dshow.cpp
plugins/win-wasapi/: win-wasapi.cpp
